src/test/fail/calling_parameter_fail.egern
func apply(f: int, a: int): void {
    return f(a)
}
print(apply(4, 5))
